--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
+    "next": "13.5.4",
+    "next-redux-wrapper": "^8.1.0",
+    "react": "^18.2.0",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "typescript": "^5"
   }
 }
